[workspace]
members = [
  "bin-format",
  "editor-format",
  "user-interface",
  "blender/rust-addon-library",
  "blender/rust-addon-installer",
]

[profile.release]
# lto = true
# codegen-units = 1
debug = true

[profile.release.package]
teardown-bin-format = { debug = false }

[profile.dev.package."*"]
opt-level = 3
