[package]
name = "teardown-bin-format"
version = "0.9.0"
edition = "2018"

[dependencies]
structr = { git = "https://github.com/metarmask/structr", rev = "97c82ee" }
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
num-traits = "0.2"
owning_ref = "0.4"
approx = "0.4"
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"

# optional
building-blocks = { git = "https://github.com/metarmask/building-blocks", features = ["nalgebra", "mesh"], default-features = false, optional = true }
nalgebra = { version = "0.26", optional = true }

[features]
default = []
mesh = ["building-blocks"]
convert_nalgebra = ["nalgebra"]
