[package]
name = "teardown-converter"
version = "0.1.0"
edition = "2018"

[dependencies]
teardown-bin-format = { path = "../bin-format" }
teardown-editor-format = { path = "../editor-format" }
structopt = "0.3"
vox = { git = "https://github.com/metarmask/vox-format", rev = "41b0630" }
rayon = "1.5"
iced = "0.2"
alphanumeric-sort = "1.4"
owning_ref = "0.4"
dirs = "3.0"
steamy-vdf = "0.2"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
open = "1.6"

[target.'cfg(windows)'.dependencies]
registry = "1.1"