[package]
name = "teardown-converter"
version = "0.6.1"
edition = "2018"

[dependencies]
teardown-bin-format = { path = "../bin-format" }
teardown-editor-format = { path = "../editor-format" }
structopt = "0.3"
clap = "2.33"
vox = { git = "https://github.com/metarmask/vox-format", rev = "1adf146" }
rayon = "1.5"
owning_ref = "0.4"
dirs = "3.0"
keyvalues-parser = "0.1"
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
rlua = "0.18"
regex = "1.5"
lazy_static = "1.4"

iced = { version = "0.3", optional = true, features = ["image"] }
alphanumeric-sort = { version = "1.4", optional = true }
futures = { version = "0.3", optional = true }
open = { version = "1.6", optional = true }

[features]
graphical = ["iced", "alphanumeric-sort", "futures", "open"]
default = ["graphical"]

[target.'cfg(windows)'.dependencies]
registry = "1.1"