[package]
name = "teardown-blender-import"
version = "0.1.0"
edition = "2018"

[lib]
name = "teardown_import"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.13", features = ["extension-module", "nightly"] }
#pyo3-log = "0.3"
teardown-bin-format = { path = "../../bin-format", features = ["mesh"] }
building-blocks = "0.5"
rayon = "1.5"
indicatif = { version = "0.15.0", features = ["rayon"] }
